k8s/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
  namespace: streamingapp
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
    spec:
      serviceAccountName: admin-service-sa

      containers:
        - name: admin-service
          image: 087666071191.dkr.ecr.us-east-1.amazonaws.com/streaming-admin:1.0.0
          imagePullPolicy: Always

          ports:
            - containerPort: 3003
              name: http

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: streamingapp
spec:
  type: ClusterIP
  selector:
    app: admin-service
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
