k8s/chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  namespace: streamingapp
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
        - name: chat-service
          image: 087666071191.dkr.ecr.us-east-1.amazonaws.com/streaming-chat:1.0.0
          imagePullPolicy: Always

          ports:
            - containerPort: 3004
              name: http

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3004
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3004
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: streamingapp
spec:
  type: ClusterIP
  selector:
    app: chat-service
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
