k8s/streaming.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming-service
  namespace: streamingapp
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: streaming-service
  template:
    metadata:
      labels:
        app: streaming-service
    spec:
      serviceAccountName: streaming-service-sa

      containers:
        - name: streaming-service
          image: 087666071191.dkr.ecr.us-east-1.amazonaws.com/streaming-stream:1.0.0
          imagePullPolicy: Always

          ports:
            - containerPort: 3002
              name: http

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3002
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: streaming-service
  namespace: streamingapp
spec:
  type: ClusterIP
  selector:
    app: streaming-service
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
