k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamingapp-ingress
  namespace: streamingapp
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'



spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /api/streaming
            pathType: Prefix
            backend:
              service:
                name: streaming-service
                port:
                  number: 3002

          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 3003

          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 3004

          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 3004

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
